src/test/ui/if/if-let-arm-types.stderr
error[E0308]: `if let` arms have incompatible types
  --> $DIR/if-let-arm-types.rs:6:9
   |
LL | /     if let Some(b) = None {
LL | |
LL | |         ()
LL | |     } else {
LL | |         1
   | |         ^ expected (), found integer
LL | |     };
   | |_____- `if let` arms have incompatible types
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
